# ads.ai

./: .pdm-python  .pre-commit-config.yaml  README.md  example.py  pyproject.toml  start.code-workspace
.pyprojectx/main/: activate  activate.bat  activate.fish  activate.nu  activate.ps1  activate_this.py
.pyprojectx/pyprojectx/2.1.6-py3.10/: pyvenv.cfg
.pyprojectx/pyprojectx/2.1.6-py3.10/Scripts/: activate  activate.bat
src/: start.ipynb
